--- a/data-jpa/build.gradle
+++ b/data-jpa/build.gradle
@@ -28,6 +28,8 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'//'3.1.3'spring boot가 알아서 정해줌.
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+//	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.7' //sql 처리 로그로 볼 수 있음.//성능 고려시 뺀다.
 }
 
 tasks.named('test') {
